packages/block-library/src/categories/editor.scss
.wp-block-categories ul {
	padding-left: 2.5em;

	ul {
		margin-top: 6px;
	}
}

