Fix center alignment on the dropdown in the categories block

--- a/packages/block-library/src/categories/editor.scss
+++ b/packages/block-library/src/categories/editor.scss
@@ -5,3 +5,10 @@
 		margin-top: 6px;
 	}
 }
+
+/* Only apply the text align on dropdowns, not lists. */
+.wp-block-categories:has(.wp-block-categories__dropdown) {
+	&.aligncenter {
+		text-align: center;
+	}
+}
